Remove gallery sidebar, fix z-index

--- a/src/scss/Gallery.scss
+++ b/src/scss/Gallery.scss
@@ -9,6 +9,7 @@
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-auto-flow: dense;
   overflow-y: scroll;
+  scrollbar-width: none;
   background-color: $dark;
   transition: transform 500ms $timing-function;
   .youtube {
