--- a/src/scss/Header.scss
+++ b/src/scss/Header.scss
@@ -8,7 +8,7 @@
     position: sticky;
     top: 0;
     box-shadow: $box-shadow;
-    // z-index: 10;
+    z-index: 10;
     flex-grow: 1;
     flex-shrink: 0;
     .header-name {
