--- a/src/scss/TileModal.scss
+++ b/src/scss/TileModal.scss
@@ -7,7 +7,7 @@
   z-index: 10;
   /* display: flex; */
   display: flex;
-  background-color: blue;
+  // background-color: blue;
   flex-direction: column;
   align-items: center;
   justify-content: center;
