--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -58,7 +58,7 @@ main {
   width: 100%;
   background-color: $dark;
   position: absolute;
-  // z-index: 5;
+  z-index: 5;
 
   transform: translateY(-250%);
   transition: transform 500ms $timing-function 400ms;
